# CFUtilities

./: .clang-format  .gitignore  .travis.yml  CHANGES  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac
.github/workflows/: build.yml
.travis/: before_install.sh
doc/: Doxyfile.in  Makefile.am  Makefile.in  index.dox
include/: CFUtilities-config.h.in  Makefile.am  Makefile.in
include/CFUtilities/: CFString.hpp  CFStringTemplate.hpp  CFUConfig.h.in  CFUtilities.h  CFUtilities.hpp
src/: CFUtilities.cpp  Makefile.am  Makefile.in
tests/: Makefile.am  Makefile.in  TestCFMutableString.cpp  TestCFString.cpp  TestCFUAbsoluteTimeGetPOSIXTime.cpp  TestCFUBooleanCreate.cpp  TestCFUDateCreate.cpp  TestCFUDateGetPOSIXTime.cpp  TestCFUDictionaryCopyKeys.cpp  TestCFUDictionaryDifference.cpp  TestCFUDictionaryGetBoolean.cpp  TestCFUDictionaryMerge.cpp  TestCFUDictionaryMergeWithDifferences.cpp  TestCFUDictionarySetBoolean.cpp  TestCFUDictionarySetCString.cpp  TestCFUGetNumberType.cpp  TestCFUIsTypeID.cpp  TestCFUPOSIXTimeGetAbsoluteTime.cpp  TestCFUPropertyListRead.cpp  TestCFUPropertyListWrite.cpp  TestCFUReferenceSet.cpp  TestCFURelease.cpp  TestCFUSetIntersectionSet.cpp  TestCFUSetIsEmptySet.cpp  TestCFUSetUnionSet.cpp  TestCFUStringChomp.cpp  TestCFUStringsMatch.cpp  TestCFUTreeContextInit.cpp  TestCFUTreeCreate.cpp  TestDriver.cpp
